api documentada no formato swagger openapi
