# docs/api/openapi.yaml
@@ -27,7 +27,7 @@ paths:
                 password:
                   type: string
             example:
-              email: company@gmail.com
+              email: pastel@gmail.com
               password:  '1234'
       responses:
         200:
@@ -48,49 +48,19 @@ paths:
                         type: string
                   token:
                     type: string
-        default:
-          description: Error
-  /company:
-    get:
-      tags:
-      - Company
-      summary: List all
-      operationId: getCompanies
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id: 
-                      type: integer
-                    name:
-                      type: string
-                    email:
-                      type: string
               example:
-                [
-                  {
-                    id: 1,
-                    name: Company 1,
-                    email: company1@gmail.com
-                  },
-                  {
-                    id: 2,
-                    name: Company 2,
-                    email: company2@gmail.com
-                  }
-                ]
+                company:
+                  id: 4
+                  name: pastel
+                  email: pastel@gmail.com
+                token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NCwiaWF0IjoxNjA0Mjk0MzgwLCJleHAiOjE2MDQ4OTkxODB9.dSuh_JFr0S975PzlnJhEH6jGxZ2ubrzgBXdOfqgec_Q
         default:
           description: Error
+  '/company':
     post:
       tags:
       - Company
-      summary: Create
+      summary: Create Company
       operationId: createCompany
       requestBody:
         required: true
@@ -118,14 +88,95 @@ paths:
           $ref: '#/components/responses/companyResponse'
         default:
           description: Error
-  '/company/{id}':
+  '/company/{companyId}':
+    get:
+      tags:
+      - Company
+      summary: List Company
+      description: Autenticação necessária
+      operationId: getCompanies
+      parameters:
+      - $ref: '#/components/parameters/companyId'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id: 
+                      type: integer
+                    name:
+                      type: string
+                    email:
+                      type: string
+              example:
+                id: 1
+                name: dogao
+                email: dogao@gmail.com
+        default:
+          description: Error
+    post:
+      tags:
+      - Company
+      summary: Handle User from Queue
+      description: Autenticação necessária
+      operationId: hendleUser
+      parameters: 
+      - $ref: '#/components/parameters/companyId'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  handledPosition:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      first:
+                        type: boolean
+                        description: Se é a primeira posição
+                      createdAt:
+                        type: string
+                        format: date
+                      updatedAt:
+                        type: string
+                        format: date
+                      queueId:
+                        type: integer
+                      next:
+                        type: integer
+                        description: O id da próxima posição
+                      userId:
+                        type: integer
+                        description: Id do usuário que foi atendido
+              example:
+                message: User handled
+                handledPosition:
+                  id: 21
+                  first: true
+                  createdAt: '2020-11-02T04:22:51.627Z'
+                  updatedAt: '2020-11-02T05:07:15.072Z'
+                  queueId: 1
+                  next: 22
+                  userId: 4
     put:
       tags:
       - Company
-      summary: Update
+      summary: Update Company
+      description: Autenticação necessária
       operationId: updateCompany
       parameters:
-        - $ref: '#/components/parameters/id'
+        - $ref: '#/components/parameters/companyId'
       requestBody:
         required: true
         content:
@@ -146,11 +197,11 @@ paths:
                   type: string
                   description: obrigatório caso preencha o campo `oldPassword`
             example:
-              name: company
-              email: company@gmail.com
+              name: burrito
+              email: burrito@gmail.com
               oldPassword: '1234'
-              password: '4321'
-              confirmPassword: '4321'
+              password: '6666'
+              confirmPassword: '6666'
       responses:
         200:
           $ref: '#/components/responses/companyResponse'
@@ -159,10 +210,11 @@ paths:
     delete:
       tags:
       - Company
-      summary: Delete
+      summary: Delete Company
+      description: Autenticação necessária
       operationId: deleteCompany
       parameters:
-        - $ref: '#/components/parameters/id'
+        - $ref: '#/components/parameters/companyId'
       responses:
         200:
           description: Success
@@ -173,19 +225,328 @@ paths:
                 properties:
                   message: 
                     type: string
+                  deletedCompany:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                      name:
+                        type: string
+                      email:
+                        type: string
               example:
                 message: Company deleted
+                deletedCompany:
+                  id: 4
+                  name: pastel
+                  email: pastel@gmail.com
+        default:
+          description: Error
+  '/queue':
+    post:
+      tags:
+      - Queue
+      summary: Create Queue
+      operationId: createQueue
+      requestBody:
+        $ref: '#/components/requestBodies/createQueue'
+      responses:
+        200:
+          $ref: '#/components/responses/queueResponse'
+        default:
+          description: Error
+  '/queue/{queueId}':
+    get:
+      tags: 
+      - Queue
+      summary: List Queue
+      operationId: listQueue
+      parameters: 
+      - $ref: '#/components/parameters/queueId'
+      responses:
+        200:
+          $ref: '#/components/responses/queueResponse'
+        default:
+          description: Error
+    put:
+      tags: 
+      - Queue
+      summary: Update Queue
+      operationId: updateQueue
+      parameters: 
+      - $ref: '#/components/parameters/queueId'
+      requestBody:
+        $ref: '#/components/requestBodies/updateQueue'
+      responses:
+        200:
+          $ref: '#/components/responses/queueResponse'
+        default:
+          description: Error
+    delete:
+      tags: 
+      - Queue
+      summary: Delete Queue
+      operationId: deleteQueue
+      parameters: 
+      - $ref: '#/components/parameters/queueId'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  deletedQueueId:
+                    type: integer
+              example:
+                message: Queue deleted
+                deletedQueueId: 6
+        default:
+          description: Error
+  '/user':
+    post:
+      tags:
+      - User
+      summary: Create User
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+              - name
+              - phone
+              type: object
+              properties:
+                name:
+                  type: string
+                phone:
+                  type: string
+            example:
+              name: Nadya
+              phone: '994588754'
+      responses:
+        200:
+          $ref: '#/components/responses/userResponse'
+        default:
+          description: Error
+  '/user/{userId}':
+    get:
+      tags:
+      - User
+      summary: List User
+      operationId: listUser
+      parameters:
+      - $ref: '#/components/parameters/userId'
+      responses:
+        200:
+          $ref: '#/components/responses/userResponse'
+        default:
+          description: Error
+    post:
+      tags:
+      - User
+      summary: Add User to Queue
+      operationId: addUserToQueue
+      parameters:
+       - $ref: '#/components/parameters/userId'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+              - ingressCode
+              type: object
+              properties:
+                ingressCode:
+                  type: string
+                  description: Código de acesso da Queue
+            example:
+              ingressCode: euS2burrito612
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  position:
+                    type: object
+                    description: Posição do User na Queue
+                    properties:
+                      id:
+                        type: integer
+                      queueId:
+                        type: integer
+                      userId:
+                        type: integer
+                      updatedAt:
+                        type: string
+                      createdAt:
+                        type: string
+                      first:
+                        type: boolean
+                        description: Se é a primeira posição na Queue, caso não for, o valor é `null`
+                      next:
+                        type: integer
+                        default: null
+                        description: Id da próxima posição, vai ser sempre `null` pois é a última posição
+              example:
+                position:
+                  id: 30
+                  queueId: 8
+                  userId: 3
+                  updatedAt: '2020-11-02T07:38:15.842Z'
+                  createdAt: '2020-11-02T07:38:15.842Z'
+                  first: null
+                  next: null
+        default:
+          description: Error
+  '/user/queue/{queueId}':
+    get:
+      tags:
+      - User
+      summary: List Queue's Users
+      description: Lista a posição de todos os Users de uma Queue
+      operationId: listQueueUsers
+      parameters:
+      - $ref: '#/components/parameters/queueId'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    position:
+                      type: integer
+                    id:
+                      type: integer
+                    first:
+                      type: boolean
+                    createdAt:
+                      type: string
+                    updatedAt:
+                      type: string
+                    queueId:
+                      type: integer
+                    next:
+                      type: integer
+                    userId:
+                      type: integer
+              example:
+                - position: 1
+                  id: 20
+                  first: true
+                  createdAt: '2020-11-02T04:21:32.598Z'
+                  updatedAt: '2020-11-02T04:31:40.635Z'
+                  queueId: 1
+                  next: 21
+                  userId: 5
+                - position: 2
+                  id: 21
+                  first: null
+                  createdAt: '2020-11-02T04:22:51.627Z'
+                  updatedAt: '2020-11-02T04:22:55.265Z'
+                  queueId: 1
+                  next: null
+                  userId: 4
         default:
           description: Error
 components:
   parameters:
-    id:
-      name: id
+    companyId:
+      name: companyId
       in: path
-      description: Company ID
+      description: Company Id
       required: true
       schema:
         type: integer
+    queueId:
+      name: queueId
+      in: path
+      description: Queue Id
+      required: true
+      schema:
+        type: integer
+    userId:
+      name: userId
+      in: path
+      description: User Id
+      required: true
+      schema:
+        type: integer
+  requestBodies:
+    createQueue:
+      required: true
+      content:
+        application/json:
+          schema:
+            required:
+            - companyId
+            - ingressCode
+            - startTime
+            - endTime
+            type: object
+            properties:
+              companyId:
+                type: integer
+                description: Id da Company a qual a Queue pertence
+              ingressCode:
+                type: string
+                description: Código de acesso a Queue
+              observation:
+                type: string
+              startTime:
+                type: string
+                format: date
+              endTime:
+                type: string
+                format: date
+          example:
+            companyId: 1
+            ingressCode: euS2burrito92
+            observation: desconto no burrito de frango
+            startTime: '2020-10-25T18:00:00.000Z'
+            endTime: '2020-10-25T23:00:00.000Z'
+    updateQueue:
+      required: true
+      content:
+        application/json:
+          schema:
+            required:
+            - companyId
+            type: object
+            properties:
+              companyId:
+                type: integer
+                description: Id da Company a qual a Queue pertence
+              ingressCode:
+                type: string
+                description: Código de acesso a Queue
+              observation:
+                type: string
+              startTime:
+                type: string
+                format: date
+              endTime:
+                type: string
+                format: date
+          example:
+            companyId: 1
+            ingressCode: euS2burrito92
+            observation: desconto no burrito de frango
+            startTime: '2020-10-25T18:00:00.000Z'
+            endTime: '2020-10-25T23:00:00.000Z'
   responses:
     companyResponse:
       description: Success
@@ -201,9 +562,57 @@ components:
               email:
                 type: string
           example:
-              id: 1
-              name: company
-              email: company@gmail.com
+            id: 5
+            name: burrito
+            email: burrito@gmail.com
+    queueResponse:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+                description: Id da Queue
+              companyId:
+                type: integer
+                description: Id da Company a qual a Queue pertence
+              ingressCode:
+                type: string
+                description: Código de acesso a Queue
+              observation:
+                type: string
+              startTime:
+                type: string
+                format: date
+              endTime:
+                type: string
+                format: date
+          example:
+            id: 3
+            companyId: 1
+            ingressCode: euS2burrito92
+            observation: desconto no burrito de frango
+            startTime: '2020-10-24T21:00:00.000Z'
+            endTime: '2020-10-25T02:00:00.000Z'
+    userResponse:
+      description: Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              phone:
+                type: string
+          example:
+            id: 4
+            name: Nadya
+            phone: '994588754'
   securitySchemes:
     httpBearer:
       type: http
@@ -213,3 +622,6 @@ security:
 tags:
 - name: Session
 - name: Company
+- name: Queue
+  description: Autenticação necessária em todos os endpoints
+- name: User
